--- a/f103_EGC.ioc
+++ b/f103_EGC.ioc
@@ -10,61 +10,6 @@ ADC1.master=1
 CAD.formats=
 CAD.pinconfig=
 CAD.provider=
-Dma.Request0=SPI2_TX
-Dma.Request1=SPI3_TX
-Dma.Request2=SPI3_RX
-Dma.Request3=SPI1_TX
-Dma.Request4=SPI1_RX
-Dma.RequestsNb=5
-Dma.SPI1_RX.4.Direction=DMA_PERIPH_TO_MEMORY
-Dma.SPI1_RX.4.Instance=DMA1_Channel2
-Dma.SPI1_RX.4.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI1_RX.4.MemInc=DMA_MINC_ENABLE
-Dma.SPI1_RX.4.Mode=DMA_NORMAL
-Dma.SPI1_RX.4.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI1_RX.4.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI1_RX.4.Priority=DMA_PRIORITY_HIGH
-Dma.SPI1_RX.4.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-Dma.SPI1_TX.3.Direction=DMA_MEMORY_TO_PERIPH
-Dma.SPI1_TX.3.Instance=DMA1_Channel3
-Dma.SPI1_TX.3.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI1_TX.3.MemInc=DMA_MINC_ENABLE
-Dma.SPI1_TX.3.Mode=DMA_NORMAL
-Dma.SPI1_TX.3.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI1_TX.3.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI1_TX.3.Priority=DMA_PRIORITY_HIGH
-Dma.SPI1_TX.3.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-Dma.SPI2_TX.0.Direction=DMA_MEMORY_TO_PERIPH
-Dma.SPI2_TX.0.Instance=DMA1_Channel5
-Dma.SPI2_TX.0.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI2_TX.0.MemInc=DMA_MINC_ENABLE
-Dma.SPI2_TX.0.Mode=DMA_NORMAL
-Dma.SPI2_TX.0.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI2_TX.0.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI2_TX.0.Priority=DMA_PRIORITY_LOW
-Dma.SPI2_TX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-Dma.SPI3_RX.2.Direction=DMA_PERIPH_TO_MEMORY
-Dma.SPI3_RX.2.Instance=DMA2_Channel1
-Dma.SPI3_RX.2.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI3_RX.2.MemInc=DMA_MINC_ENABLE
-Dma.SPI3_RX.2.Mode=DMA_NORMAL
-Dma.SPI3_RX.2.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI3_RX.2.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI3_RX.2.Priority=DMA_PRIORITY_LOW
-Dma.SPI3_RX.2.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-Dma.SPI3_TX.1.Direction=DMA_MEMORY_TO_PERIPH
-Dma.SPI3_TX.1.Instance=DMA2_Channel2
-Dma.SPI3_TX.1.MemDataAlignment=DMA_MDATAALIGN_BYTE
-Dma.SPI3_TX.1.MemInc=DMA_MINC_ENABLE
-Dma.SPI3_TX.1.Mode=DMA_NORMAL
-Dma.SPI3_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_BYTE
-Dma.SPI3_TX.1.PeriphInc=DMA_PINC_DISABLE
-Dma.SPI3_TX.1.Priority=DMA_PRIORITY_LOW
-Dma.SPI3_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
-FATFS.IPParameters=_CODE_PAGE,_MAX_SS,_USE_LFN
-FATFS._CODE_PAGE=437
-FATFS._MAX_SS=512
-FATFS._USE_LFN=2
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 KeepUserPlacement=false
@@ -72,83 +17,69 @@ Mcu.CPN=STM32F103RET6
 Mcu.Family=STM32F1
 Mcu.IP0=ADC1
 Mcu.IP1=DAC
-Mcu.IP10=SYS
-Mcu.IP11=USART1
-Mcu.IP12=USB
-Mcu.IP2=DMA
-Mcu.IP3=FATFS
-Mcu.IP4=NVIC
-Mcu.IP5=RCC
-Mcu.IP6=RTC
-Mcu.IP7=SPI1
-Mcu.IP8=SPI2
-Mcu.IP9=SPI3
-Mcu.IPNb=13
+Mcu.IP2=FATFS
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=RTC
+Mcu.IP6=SPI1
+Mcu.IP7=SPI3
+Mcu.IP8=SYS
+Mcu.IP9=USART1
+Mcu.IPNb=10
 Mcu.Name=STM32F103R(C-D-E)Tx
 Mcu.Package=LQFP64
-Mcu.Pin0=PC13-TAMPER-RTC
-Mcu.Pin1=PC14-OSC32_IN
-Mcu.Pin10=PA1
-Mcu.Pin11=PA2
-Mcu.Pin12=PA3
-Mcu.Pin13=PA4
-Mcu.Pin14=PA5
-Mcu.Pin15=PA6
-Mcu.Pin16=PA7
-Mcu.Pin17=PC4
-Mcu.Pin18=PC5
-Mcu.Pin19=PB0
-Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PB1
-Mcu.Pin21=PB13
-Mcu.Pin22=PB14
-Mcu.Pin23=PB15
-Mcu.Pin24=PC6
-Mcu.Pin25=PC7
-Mcu.Pin26=PC8
-Mcu.Pin27=PC9
-Mcu.Pin28=PA8
-Mcu.Pin29=PA9
-Mcu.Pin3=PD0-OSC_IN
-Mcu.Pin30=PA10
-Mcu.Pin31=PA11
-Mcu.Pin32=PA12
-Mcu.Pin33=PA13
-Mcu.Pin34=PA14
-Mcu.Pin35=PA15
-Mcu.Pin36=PC10
-Mcu.Pin37=PC11
-Mcu.Pin38=PC12
-Mcu.Pin39=PD2
-Mcu.Pin4=PD1-OSC_OUT
-Mcu.Pin40=PB3
-Mcu.Pin41=PB4
-Mcu.Pin42=PB5
-Mcu.Pin43=PB6
-Mcu.Pin44=PB7
-Mcu.Pin45=PB8
-Mcu.Pin46=PB9
-Mcu.Pin47=VP_FATFS_VS_Generic
-Mcu.Pin48=VP_RTC_VS_RTC_Activate
-Mcu.Pin49=VP_RTC_VS_RTC_Calendar
-Mcu.Pin5=PC0
-Mcu.Pin50=VP_SYS_VS_Systick
-Mcu.Pin6=PC1
-Mcu.Pin7=PC2
-Mcu.Pin8=PC3
-Mcu.Pin9=PA0-WKUP
-Mcu.PinsNb=51
+Mcu.Pin0=PC14-OSC32_IN
+Mcu.Pin1=PC15-OSC32_OUT
+Mcu.Pin10=PA3
+Mcu.Pin11=PA4
+Mcu.Pin12=PA5
+Mcu.Pin13=PA6
+Mcu.Pin14=PA7
+Mcu.Pin15=PC4
+Mcu.Pin16=PC5
+Mcu.Pin17=PB0
+Mcu.Pin18=PB1
+Mcu.Pin19=PB2
+Mcu.Pin2=PD0-OSC_IN
+Mcu.Pin20=PC6
+Mcu.Pin21=PC7
+Mcu.Pin22=PC8
+Mcu.Pin23=PC9
+Mcu.Pin24=PA8
+Mcu.Pin25=PA9
+Mcu.Pin26=PA10
+Mcu.Pin27=PA13
+Mcu.Pin28=PA14
+Mcu.Pin29=PA15
+Mcu.Pin3=PD1-OSC_OUT
+Mcu.Pin30=PC10
+Mcu.Pin31=PC11
+Mcu.Pin32=PC12
+Mcu.Pin33=PD2
+Mcu.Pin34=PB3
+Mcu.Pin35=PB4
+Mcu.Pin36=PB5
+Mcu.Pin37=PB6
+Mcu.Pin38=PB7
+Mcu.Pin39=PB8
+Mcu.Pin4=PC0
+Mcu.Pin40=PB9
+Mcu.Pin41=VP_FATFS_VS_Generic
+Mcu.Pin42=VP_RTC_VS_RTC_Activate
+Mcu.Pin43=VP_RTC_VS_RTC_Calendar
+Mcu.Pin44=VP_SYS_VS_Systick
+Mcu.Pin5=PC1
+Mcu.Pin6=PC2
+Mcu.Pin7=PC3
+Mcu.Pin8=PA1
+Mcu.Pin9=PA2
+Mcu.PinsNb=45
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103RETx
 MxCube.Version=6.8.1
 MxDb.Version=DB.6.0.81
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.DMA1_Channel2_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.DMA1_Channel3_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.DMA1_Channel5_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.DMA2_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
-NVIC.DMA2_Channel2_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.EXTI15_10_IRQn=true\:1\:0\:true\:false\:true\:true\:true\:true
 NVIC.EXTI9_5_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
@@ -158,21 +89,15 @@ NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.RTC_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:true
+NVIC.RTC_Alarm_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
+NVIC.RTC_IRQn=true\:5\:0\:true\:false\:true\:true\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:false\:true\:false
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-PA0-WKUP.Locked=true
-PA0-WKUP.Mode=SYS_WakeUp0
-PA0-WKUP.Signal=SYS_WKUP
 PA1.Locked=true
 PA1.Signal=GPIO_Output
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
-PA11.Mode=Device
-PA11.Signal=USB_DM
-PA12.Mode=Device
-PA12.Signal=USB_DP
 PA13.Mode=Serial_Wire
 PA13.Signal=SYS_JTMS-SWDIO
 PA14.Mode=Serial_Wire
@@ -199,12 +124,8 @@ PB0.Locked=true
 PB0.Signal=GPIO_Output
 PB1.Locked=true
 PB1.Signal=ADCx_IN9
-PB13.Mode=Full_Duplex_Master
-PB13.Signal=SPI2_SCK
-PB14.Mode=Full_Duplex_Master
-PB14.Signal=SPI2_MISO
-PB15.Mode=Full_Duplex_Master
-PB15.Signal=SPI2_MOSI
+PB2.Locked=true
+PB2.Signal=GPIO_Input
 PB3.Mode=Full_Duplex_Master
 PB3.Signal=SPI3_SCK
 PB4.Mode=Full_Duplex_Master
@@ -232,9 +153,6 @@ PC11.Locked=true
 PC11.Signal=GPIO_Output
 PC12.Locked=true
 PC12.Signal=GPIO_Output
-PC13-TAMPER-RTC.Locked=true
-PC13-TAMPER-RTC.Mode=RTC OUT
-PC13-TAMPER-RTC.Signal=RTC_OUT
 PC14-OSC32_IN.Mode=LSE-External-Oscillator
 PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
@@ -290,7 +208,7 @@ ProjectManager.StackSize=0x2000
 ProjectManager.TargetToolchain=MDK-ARM V5.32
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_DMA_Init-DMA-false-HAL-true,4-MX_SPI1_Init-SPI1-false-HAL-true,5-MX_SPI2_Init-SPI2-false-HAL-true,6-MX_SPI3_Init-SPI3-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true,8-MX_USB_PCD_Init-USB-false-HAL-true,9-MX_ADC1_Init-ADC1-false-HAL-true,10-MX_RTC_Init-RTC-false-HAL-true,11-MX_DAC_Init-DAC-false-HAL-true,12-MX_FATFS_Init-FATFS-false-HAL-false
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPIO_Init-GPIO-false-HAL-true,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_USART1_UART_Init-USART1-false-HAL-true,5-MX_ADC1_Init-ADC1-false-HAL-true,6-MX_RTC_Init-RTC-true-HAL-true,7-MX_DAC_Init-DAC-false-HAL-true,8-MX_SPI3_Init-SPI3-false-HAL-true,9-MX_FATFS_Init-FATFS-false-HAL-false
 RCC.ADCFreqValue=12000000
 RCC.ADCPresc=RCC_ADCPCLK2_DIV6
 RCC.AHBFreq_Value=72000000
@@ -304,11 +222,12 @@ RCC.FamilyName=M
 RCC.HCLKFreq_Value=72000000
 RCC.I2S2Freq_Value=72000000
 RCC.I2S3Freq_Value=72000000
-RCC.IPParameters=ADCFreqValue,ADCPresc,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,I2S2Freq_Value,I2S3Freq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,RTCClockSelection,RTCFreq_Value,SDIOFreq_Value,SDIOHCLKDiv2FreqValue,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,USBPrescaler,VCOOutput2Freq_Value
+RCC.IPParameters=ADCFreqValue,ADCPresc,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,I2S2Freq_Value,I2S3Freq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,PLLSourceVirtual,RTCClockSelection,RTCFreq_Value,SDIOFreq_Value,SDIOHCLKDiv2FreqValue,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,USBPrescaler,VCOOutput2Freq_Value
 RCC.MCOFreq_Value=72000000
 RCC.PLLCLKFreq_Value=72000000
 RCC.PLLMCOFreq_Value=36000000
 RCC.PLLMUL=RCC_PLL_MUL9
+RCC.PLLSourceVirtual=RCC_PLLSOURCE_HSE
 RCC.RTCClockSelection=RCC_RTCCLKSOURCE_LSE
 RCC.RTCFreq_Value=32768
 RCC.SDIOFreq_Value=72000000
@@ -319,12 +238,11 @@ RCC.TimSysFreq_Value=72000000
 RCC.USBFreq_Value=48000000
 RCC.USBPrescaler=RCC_USBCLKSOURCE_PLL_DIV1_5
 RCC.VCOOutput2Freq_Value=8000000
-RTC.AutoPrediv=RTC_AUTO_1_SECOND
-RTC.Date=21
+RTC.Date=10
 RTC.Hours=12
-RTC.IPParameters=WeekDay,Month,Date,Year,Hours,AutoPrediv
-RTC.Month=RTC_MONTH_MARCH
-RTC.WeekDay=RTC_WEEKDAY_FRIDAY
+RTC.IPParameters=Hours,WeekDay,Month,Date,Year
+RTC.Month=RTC_MONTH_APRIL
+RTC.WeekDay=RTC_WEEKDAY_THURSDAY
 RTC.Year=25
 SH.ADCx_IN9.0=ADC1_IN9,IN9
 SH.ADCx_IN9.ConfNb=1
@@ -335,21 +253,16 @@ SH.GPXTI15.ConfNb=1
 SH.GPXTI6.0=GPIO_EXTI6
 SH.GPXTI6.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
+SPI1.CLKPhase=SPI_PHASE_2EDGE
+SPI1.CLKPolarity=SPI_POLARITY_HIGH
 SPI1.CalculateBaudRate=18.0 MBits/s
 SPI1.Direction=SPI_DIRECTION_2LINES
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
+SPI1.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate,CLKPolarity,CLKPhase
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
-SPI2.CalculateBaudRate=18.0 MBits/s
-SPI2.Direction=SPI_DIRECTION_2LINES
-SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
-SPI2.Mode=SPI_MODE_MASTER
-SPI2.VirtualType=VM_MASTER
-SPI3.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
-SPI3.CLKPolarity=SPI_POLARITY_LOW
 SPI3.CalculateBaudRate=18.0 MBits/s
 SPI3.Direction=SPI_DIRECTION_2LINES
-SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler,CLKPolarity
+SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
 SPI3.Mode=SPI_MODE_MASTER
 SPI3.VirtualType=VM_MASTER
 USART1.IPParameters=VirtualMode
