--- a/f103_EGC.ioc
+++ b/f103_EGC.ioc
@@ -17,15 +17,16 @@ Mcu.CPN=STM32F103RET6
 Mcu.Family=STM32F1
 Mcu.IP0=ADC1
 Mcu.IP1=DAC
+Mcu.IP10=USART1
 Mcu.IP2=FATFS
 Mcu.IP3=NVIC
 Mcu.IP4=RCC
 Mcu.IP5=RTC
 Mcu.IP6=SPI1
-Mcu.IP7=SPI3
-Mcu.IP8=SYS
-Mcu.IP9=USART1
-Mcu.IPNb=10
+Mcu.IP7=SPI2
+Mcu.IP8=SPI3
+Mcu.IP9=SYS
+Mcu.IPNb=11
 Mcu.Name=STM32F103R(C-D-E)Tx
 Mcu.Package=LQFP64
 Mcu.Pin0=PC14-OSC32_IN
@@ -41,39 +42,42 @@ Mcu.Pin17=PB0
 Mcu.Pin18=PB1
 Mcu.Pin19=PB2
 Mcu.Pin2=PD0-OSC_IN
-Mcu.Pin20=PC6
-Mcu.Pin21=PC7
-Mcu.Pin22=PC8
-Mcu.Pin23=PC9
-Mcu.Pin24=PA8
-Mcu.Pin25=PA9
-Mcu.Pin26=PA10
-Mcu.Pin27=PA13
-Mcu.Pin28=PA14
-Mcu.Pin29=PA15
+Mcu.Pin20=PB13
+Mcu.Pin21=PB14
+Mcu.Pin22=PB15
+Mcu.Pin23=PC6
+Mcu.Pin24=PC7
+Mcu.Pin25=PC8
+Mcu.Pin26=PC9
+Mcu.Pin27=PA8
+Mcu.Pin28=PA9
+Mcu.Pin29=PA10
 Mcu.Pin3=PD1-OSC_OUT
-Mcu.Pin30=PC10
-Mcu.Pin31=PC11
-Mcu.Pin32=PC12
-Mcu.Pin33=PD2
-Mcu.Pin34=PB3
-Mcu.Pin35=PB4
-Mcu.Pin36=PB5
-Mcu.Pin37=PB6
-Mcu.Pin38=PB7
-Mcu.Pin39=PB8
+Mcu.Pin30=PA13
+Mcu.Pin31=PA14
+Mcu.Pin32=PA15
+Mcu.Pin33=PC10
+Mcu.Pin34=PC11
+Mcu.Pin35=PC12
+Mcu.Pin36=PD2
+Mcu.Pin37=PB3
+Mcu.Pin38=PB4
+Mcu.Pin39=PB5
 Mcu.Pin4=PC0
-Mcu.Pin40=PB9
-Mcu.Pin41=VP_FATFS_VS_Generic
-Mcu.Pin42=VP_RTC_VS_RTC_Activate
-Mcu.Pin43=VP_RTC_VS_RTC_Calendar
-Mcu.Pin44=VP_SYS_VS_Systick
+Mcu.Pin40=PB6
+Mcu.Pin41=PB7
+Mcu.Pin42=PB8
+Mcu.Pin43=PB9
+Mcu.Pin44=VP_FATFS_VS_Generic
+Mcu.Pin45=VP_RTC_VS_RTC_Activate
+Mcu.Pin46=VP_RTC_VS_RTC_Calendar
+Mcu.Pin47=VP_SYS_VS_Systick
 Mcu.Pin5=PC1
 Mcu.Pin6=PC2
 Mcu.Pin7=PC3
 Mcu.Pin8=PA1
 Mcu.Pin9=PA2
-Mcu.PinsNb=45
+Mcu.PinsNb=48
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103RETx
@@ -123,6 +127,12 @@ PB0.Locked=true
 PB0.Signal=GPIO_Output
 PB1.Locked=true
 PB1.Signal=ADCx_IN9
+PB13.Mode=Full_Duplex_Master
+PB13.Signal=SPI2_SCK
+PB14.Mode=Full_Duplex_Master
+PB14.Signal=SPI2_MISO
+PB15.Mode=Full_Duplex_Master
+PB15.Signal=SPI2_MOSI
 PB2.Locked=true
 PB2.Signal=GPIO_Input
 PB3.Mode=Full_Duplex_Master
@@ -259,6 +269,11 @@ SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate,CLKPolarity,CLKPhase
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
+SPI2.CalculateBaudRate=18.0 MBits/s
+SPI2.Direction=SPI_DIRECTION_2LINES
+SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate
+SPI2.Mode=SPI_MODE_MASTER
+SPI2.VirtualType=VM_MASTER
 SPI3.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_64
 SPI3.CLKPhase=SPI_PHASE_2EDGE
 SPI3.CalculateBaudRate=562.5 KBits/s
